--- a/Application/FireNote/Modules/Auth/Registration/RegistrationViewController.storyboard
+++ b/Application/FireNote/Modules/Auth/Registration/RegistrationViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e32-Rp-rsG">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -21,20 +21,20 @@
             <objects>
                 <viewController storyboardIdentifier="RegistrationViewController" id="e32-Rp-rsG" customClass="RegistrationViewController" customModule="FireNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JaS-Az-wrs">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Bdi-KV-rFF">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAp-tx-ZGY" customClass="TPKeyboardAvoidingScrollView">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ySo-cl-gUv" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="680" translatesAutoresizingMaskIntoConstraints="NO" id="ySo-cl-gUv" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="680"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2nt-t4-AmP" userLabel="Fields View">
-                                                <rect key="frame" x="20" y="269.5" width="374" height="279"/>
+                                                <rect key="frame" x="20" y="251" width="335" height="279"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lW2-Fa-8UH">
                                                         <rect key="frame" x="0.0" y="102" width="44.5" height="28.5"/>
@@ -46,7 +46,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BEv-Zg-Iu6" customClass="PrimaryTextField" customModule="FireNote" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="135.5" width="374" height="40"/>
+                                                        <rect key="frame" x="0.0" y="135.5" width="335" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="EDx-FO-i8I"/>
                                                         </constraints>
@@ -63,7 +63,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qa1-ki-Y1G" customClass="PrimaryTextField" customModule="FireNote" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="42" width="168.5" height="40"/>
+                                                        <rect key="frame" x="0.0" y="42" width="151" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="4SS-b0-kL9"/>
                                                         </constraints>
@@ -71,7 +71,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adA-0d-UWp">
-                                                        <rect key="frame" x="205.5" y="8" width="84.5" height="29"/>
+                                                        <rect key="frame" x="184.5" y="8" width="84.5" height="29"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="29" id="ar4-5L-scd"/>
                                                         </constraints>
@@ -89,7 +89,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l1u-dP-nzE" customClass="PasswordTextField" customModule="FireNote" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="229" width="374" height="40"/>
+                                                        <rect key="frame" x="0.0" y="229" width="335" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="V9Q-Pl-M6D"/>
                                                         </constraints>
@@ -97,7 +97,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Orz-8C-urO" customClass="PrimaryTextField" customModule="FireNote" customModuleProvider="target">
-                                                        <rect key="frame" x="205.5" y="42" width="168.5" height="40"/>
+                                                        <rect key="frame" x="184.5" y="42" width="150.5" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="9x8-dl-UhE"/>
                                                         </constraints>
@@ -132,7 +132,7 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeq-G1-Ax2" customClass="PrimaryButton" customModule="FireNote" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="568.5" width="374" height="40"/>
+                                                <rect key="frame" x="20" y="550" width="335" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="SdM-qd-toD"/>
                                                 </constraints>
@@ -142,7 +142,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dO8-rJ-E3a" userLabel="Register account View">
-                                                <rect key="frame" x="77" y="743" width="260" height="55"/>
+                                                <rect key="frame" x="57.5" y="605" width="260" height="55"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44w-kG-wUP">
                                                         <rect key="frame" x="0.0" y="17.5" width="197" height="20"/>
@@ -171,14 +171,14 @@
                                                 </constraints>
                                             </view>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="0Co-uV-QT9">
-                                                <rect key="frame" x="142" y="20" width="130" height="130"/>
+                                                <rect key="frame" x="122.5" y="20" width="130" height="130"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="130" id="8Nm-4k-abA"/>
                                                     <constraint firstAttribute="width" constant="130" id="pAD-lf-Vcy"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fza-56-NRs">
-                                                <rect key="frame" x="20" y="188.5" width="374" height="56"/>
+                                                <rect key="frame" x="20" y="170" width="335" height="56"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="56" id="sdS-UB-9fD"/>
                                                 </constraints>
@@ -189,6 +189,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="qeq-G1-Ax2" secondAttribute="bottom" constant="90" id="1cp-ZM-lkc"/>
                                             <constraint firstAttribute="trailing" secondItem="Fza-56-NRs" secondAttribute="trailing" constant="20" id="539-XH-Bfm"/>
                                             <constraint firstItem="0Co-uV-QT9" firstAttribute="centerX" secondItem="ySo-cl-gUv" secondAttribute="centerX" id="6Lh-LS-ygB"/>
                                             <constraint firstItem="2nt-t4-AmP" firstAttribute="top" secondItem="Fza-56-NRs" secondAttribute="bottom" constant="25" id="B9r-vb-tl2"/>
@@ -199,13 +200,12 @@
                                             <constraint firstAttribute="bottom" secondItem="dO8-rJ-E3a" secondAttribute="bottom" constant="20" id="GvZ-wu-kAj"/>
                                             <constraint firstItem="2nt-t4-AmP" firstAttribute="leading" secondItem="ySo-cl-gUv" secondAttribute="leading" constant="20" id="Ntu-ys-F59"/>
                                             <constraint firstItem="dO8-rJ-E3a" firstAttribute="centerX" secondItem="ySo-cl-gUv" secondAttribute="centerX" id="Q7r-gs-fVa"/>
-                                            <constraint firstItem="dO8-rJ-E3a" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qeq-G1-Ax2" secondAttribute="bottom" constant="20" id="Qbt-ft-DmR"/>
                                             <constraint firstItem="0Co-uV-QT9" firstAttribute="top" secondItem="ySo-cl-gUv" secondAttribute="top" constant="20" id="Wno-Sy-Xjf"/>
-                                            <constraint firstItem="2nt-t4-AmP" firstAttribute="centerY" secondItem="ySo-cl-gUv" secondAttribute="centerY" id="XAW-Zf-WCa"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dO8-rJ-E3a" secondAttribute="trailing" constant="10" id="Xym-6f-lCO"/>
                                             <constraint firstItem="qeq-G1-Ax2" firstAttribute="leading" secondItem="2nt-t4-AmP" secondAttribute="leading" id="c6U-m9-uGl"/>
                                             <constraint firstItem="dO8-rJ-E3a" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ySo-cl-gUv" secondAttribute="leading" constant="10" id="jAA-Dd-h9n"/>
-                                            <constraint firstItem="Fza-56-NRs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0Co-uV-QT9" secondAttribute="bottom" constant="20" id="riq-Ig-Eol"/>
+                                            <constraint firstItem="Fza-56-NRs" firstAttribute="top" secondItem="0Co-uV-QT9" secondAttribute="bottom" constant="20" id="riq-Ig-Eol"/>
+                                            <constraint firstItem="dO8-rJ-E3a" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qeq-G1-Ax2" secondAttribute="bottom" constant="15" id="tHJ-yI-CHs"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -213,7 +213,6 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="ySo-cl-gUv" secondAttribute="bottom" id="04T-ZP-x5f"/>
                                     <constraint firstAttribute="trailing" secondItem="ySo-cl-gUv" secondAttribute="trailing" id="YKf-yd-6ib"/>
-                                    <constraint firstItem="ySo-cl-gUv" firstAttribute="height" secondItem="eAp-tx-ZGY" secondAttribute="height" priority="250" id="eOG-gx-Auv"/>
                                     <constraint firstItem="ySo-cl-gUv" firstAttribute="leading" secondItem="eAp-tx-ZGY" secondAttribute="leading" id="iPZ-Uu-d1e"/>
                                     <constraint firstItem="ySo-cl-gUv" firstAttribute="width" secondItem="eAp-tx-ZGY" secondAttribute="width" id="vPn-aq-cUg"/>
                                     <constraint firstItem="ySo-cl-gUv" firstAttribute="top" secondItem="eAp-tx-ZGY" secondAttribute="top" id="z3M-X7-z5Z"/>
@@ -225,7 +224,7 @@
                         <color key="backgroundColor" name="background_main"/>
                         <constraints>
                             <constraint firstItem="o1Z-5O-y3c" firstAttribute="bottom" secondItem="eAp-tx-ZGY" secondAttribute="bottom" id="Pjb-SO-dtB"/>
-                            <constraint firstItem="eAp-tx-ZGY" firstAttribute="top" secondItem="o1Z-5O-y3c" secondAttribute="top" id="SUw-N4-KA7"/>
+                            <constraint firstItem="eAp-tx-ZGY" firstAttribute="top" secondItem="JaS-Az-wrs" secondAttribute="top" constant="20" id="SUw-N4-KA7"/>
                             <constraint firstItem="eAp-tx-ZGY" firstAttribute="leading" secondItem="o1Z-5O-y3c" secondAttribute="leading" id="UFS-dB-ZDm"/>
                             <constraint firstItem="Bdi-KV-rFF" firstAttribute="width" secondItem="JaS-Az-wrs" secondAttribute="width" id="Y40-fQ-yXj"/>
                             <constraint firstItem="Bdi-KV-rFF" firstAttribute="leading" secondItem="o1Z-5O-y3c" secondAttribute="leading" id="aaM-dA-lLY"/>
@@ -244,14 +243,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="737-C6-cfR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-104.34782608695653" y="55.580357142857139"/>
+            <point key="canvasLocation" x="-104.8" y="55.322338830584712"/>
         </scene>
     </scenes>
     <resources>
         <image name="background" width="794" height="1123"/>
         <image name="logo" width="346" height="346"/>
         <namedColor name="background_main">
-            <color red="0.99215686274509807" green="0.94509803921568625" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.99199998378753662" green="1" blue="0.94499999284744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
