Add Aztec library and partly implement the editor screen.

--- a/Application/FireNote/Modules/Editor/EditorViewController.storyboard
+++ b/Application/FireNote/Modules/Editor/EditorViewController.storyboard
@@ -1,7 +1,53 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="cnj-mW-iJC">
+            <objects>
+                <viewController id="2lj-lh-eox" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6aE-iO-Twz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4MI-cM-lKx" customClass="TPKeyboardAvoidingScrollView">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iqB-jc-7Ql" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="iqB-jc-7Ql" secondAttribute="bottom" id="9yy-FF-VOK"/>
+                                    <constraint firstItem="iqB-jc-7Ql" firstAttribute="width" secondItem="4MI-cM-lKx" secondAttribute="width" id="AN8-lT-uNZ"/>
+                                    <constraint firstItem="iqB-jc-7Ql" firstAttribute="leading" secondItem="4MI-cM-lKx" secondAttribute="leading" id="Db9-O8-Ld6"/>
+                                    <constraint firstAttribute="trailing" secondItem="iqB-jc-7Ql" secondAttribute="trailing" id="I71-Td-ZcA"/>
+                                    <constraint firstItem="iqB-jc-7Ql" firstAttribute="height" secondItem="4MI-cM-lKx" secondAttribute="height" id="SAD-7l-eaO"/>
+                                    <constraint firstItem="iqB-jc-7Ql" firstAttribute="top" secondItem="4MI-cM-lKx" secondAttribute="top" id="aTA-cx-PRt"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="EFR-2W-3q1"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="RBa-m1-oPg"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="4MI-cM-lKx" firstAttribute="leading" secondItem="2qq-GK-RVu" secondAttribute="leading" id="0zK-I0-Q2d"/>
+                            <constraint firstItem="2qq-GK-RVu" firstAttribute="trailing" secondItem="4MI-cM-lKx" secondAttribute="trailing" id="CFM-dv-vgg"/>
+                            <constraint firstItem="2qq-GK-RVu" firstAttribute="bottom" secondItem="4MI-cM-lKx" secondAttribute="bottom" id="QrP-56-bhy"/>
+                            <constraint firstItem="4MI-cM-lKx" firstAttribute="top" secondItem="2qq-GK-RVu" secondAttribute="top" id="djI-lH-FOF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2qq-GK-RVu"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yPL-rW-l0a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-616" y="113"/>
+        </scene>
+    </scenes>
 </document>
