--- a/Application/FireNote/Modules/Editor/EditorViewController.storyboard
+++ b/Application/FireNote/Modules/Editor/EditorViewController.storyboard
@@ -1,26 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2lj-lh-eox">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-Regular.ttf">
+            <string>Baloo2-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Editor View Controller-->
         <scene sceneID="cnj-mW-iJC">
             <objects>
-                <viewController id="2lj-lh-eox" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditorViewController" id="2lj-lh-eox" customClass="EditorViewController" customModule="FireNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6aE-iO-Twz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4MI-cM-lKx" customClass="TPKeyboardAvoidingScrollView">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="4MI-cM-lKx" customClass="TPKeyboardAvoidingScrollView">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iqB-jc-7Ql" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="275"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Note title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eI5-bS-aYY">
+                                                <rect key="frame" x="15" y="10" width="384" height="24"/>
+                                                <color key="textColor" name="text_primary"/>
+                                                <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="19"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="caD-C4-uky" userLabel="Separator View">
+                                                <rect key="frame" x="0.0" y="44" width="414" height="1"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="zky-Kg-86I"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ks-Yy-1dK" userLabel="Attachments View">
+                                                <rect key="frame" x="0.0" y="175" width="414" height="100"/>
+                                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="eyN-WO-t3e"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Gz-Ox-wY2" userLabel="TextViewContainer">
+                                                <rect key="frame" x="0.0" y="55" width="414" height="120"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="120" id="hyY-5f-LAa"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="eI5-bS-aYY" firstAttribute="top" secondItem="iqB-jc-7Ql" secondAttribute="top" constant="10" id="37F-d4-xcT"/>
+                                            <constraint firstAttribute="trailing" secondItem="caD-C4-uky" secondAttribute="trailing" id="3P5-9t-TqG"/>
+                                            <constraint firstItem="6ks-Yy-1dK" firstAttribute="leading" secondItem="iqB-jc-7Ql" secondAttribute="leading" id="4pW-lb-76e"/>
+                                            <constraint firstAttribute="bottom" secondItem="6ks-Yy-1dK" secondAttribute="bottom" id="LbG-Ag-dfG"/>
+                                            <constraint firstItem="9Gz-Ox-wY2" firstAttribute="leading" secondItem="iqB-jc-7Ql" secondAttribute="leading" id="QO5-sM-3I1"/>
+                                            <constraint firstItem="9Gz-Ox-wY2" firstAttribute="top" secondItem="caD-C4-uky" secondAttribute="bottom" constant="10" id="bEO-bE-KmN"/>
+                                            <constraint firstAttribute="trailing" secondItem="6ks-Yy-1dK" secondAttribute="trailing" id="eoM-5n-OgD"/>
+                                            <constraint firstAttribute="trailing" secondItem="eI5-bS-aYY" secondAttribute="trailing" constant="15" id="qam-sB-k8H"/>
+                                            <constraint firstAttribute="trailing" secondItem="9Gz-Ox-wY2" secondAttribute="trailing" id="rIM-W1-FY9"/>
+                                            <constraint firstItem="caD-C4-uky" firstAttribute="leading" secondItem="iqB-jc-7Ql" secondAttribute="leading" id="ut6-rN-XLD"/>
+                                            <constraint firstItem="6ks-Yy-1dK" firstAttribute="top" secondItem="9Gz-Ox-wY2" secondAttribute="bottom" id="vjd-NX-2f3"/>
+                                            <constraint firstItem="caD-C4-uky" firstAttribute="top" secondItem="eI5-bS-aYY" secondAttribute="bottom" constant="10" id="xVO-HO-alj"/>
+                                            <constraint firstItem="eI5-bS-aYY" firstAttribute="leading" secondItem="iqB-jc-7Ql" secondAttribute="leading" constant="15" id="xb9-MY-dgf"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -28,26 +78,61 @@
                                     <constraint firstItem="iqB-jc-7Ql" firstAttribute="width" secondItem="4MI-cM-lKx" secondAttribute="width" id="AN8-lT-uNZ"/>
                                     <constraint firstItem="iqB-jc-7Ql" firstAttribute="leading" secondItem="4MI-cM-lKx" secondAttribute="leading" id="Db9-O8-Ld6"/>
                                     <constraint firstAttribute="trailing" secondItem="iqB-jc-7Ql" secondAttribute="trailing" id="I71-Td-ZcA"/>
-                                    <constraint firstItem="iqB-jc-7Ql" firstAttribute="height" secondItem="4MI-cM-lKx" secondAttribute="height" id="SAD-7l-eaO"/>
                                     <constraint firstItem="iqB-jc-7Ql" firstAttribute="top" secondItem="4MI-cM-lKx" secondAttribute="top" id="aTA-cx-PRt"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="EFR-2W-3q1"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="RBa-m1-oPg"/>
                             </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zrL-l6-Buq" userLabel="FormatBarContainer">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="uMl-Qq-djb"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgk-KV-vh1" userLabel="Attachment Bar">
+                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Ont-er-aqH"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="4MI-cM-lKx" firstAttribute="leading" secondItem="2qq-GK-RVu" secondAttribute="leading" id="0zK-I0-Q2d"/>
                             <constraint firstItem="2qq-GK-RVu" firstAttribute="trailing" secondItem="4MI-cM-lKx" secondAttribute="trailing" id="CFM-dv-vgg"/>
+                            <constraint firstItem="2qq-GK-RVu" firstAttribute="trailing" secondItem="kgk-KV-vh1" secondAttribute="trailing" id="Dwo-bK-r4z"/>
+                            <constraint firstItem="2qq-GK-RVu" firstAttribute="bottom" secondItem="kgk-KV-vh1" secondAttribute="bottom" id="GCP-Vf-dfk"/>
+                            <constraint firstItem="zrL-l6-Buq" firstAttribute="top" secondItem="2qq-GK-RVu" secondAttribute="top" constant="-44" id="KmU-0v-KPW"/>
+                            <constraint firstItem="kgk-KV-vh1" firstAttribute="leading" secondItem="2qq-GK-RVu" secondAttribute="leading" id="O1d-dF-QWv"/>
                             <constraint firstItem="2qq-GK-RVu" firstAttribute="bottom" secondItem="4MI-cM-lKx" secondAttribute="bottom" id="QrP-56-bhy"/>
+                            <constraint firstItem="zrL-l6-Buq" firstAttribute="leading" secondItem="2qq-GK-RVu" secondAttribute="leading" id="UIp-gf-GtA"/>
                             <constraint firstItem="4MI-cM-lKx" firstAttribute="top" secondItem="2qq-GK-RVu" secondAttribute="top" id="djI-lH-FOF"/>
+                            <constraint firstItem="2qq-GK-RVu" firstAttribute="trailing" secondItem="zrL-l6-Buq" secondAttribute="trailing" id="eeX-sI-u5j"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2qq-GK-RVu"/>
                     </view>
+                    <connections>
+                        <outlet property="attachmentBar" destination="kgk-KV-vh1" id="Y3b-vt-cPE"/>
+                        <outlet property="attachmentBarBottomConstraint" destination="GCP-Vf-dfk" id="xXK-JG-5Cu"/>
+                        <outlet property="attachmentsViewHeightConstraint" destination="eyN-WO-t3e" id="KB2-jr-4f1"/>
+                        <outlet property="bodyTextViewContainerView" destination="9Gz-Ox-wY2" id="YhN-Iz-cco"/>
+                        <outlet property="bodyTextViewHeightConstraint" destination="hyY-5f-LAa" id="8bK-fG-yxd"/>
+                        <outlet property="formatBarContainerView" destination="zrL-l6-Buq" id="Zqn-y8-hjM"/>
+                        <outlet property="noteAttachmentsView" destination="6ks-Yy-1dK" id="yFl-up-3ad"/>
+                        <outlet property="scrollView" destination="4MI-cM-lKx" id="nKB-tc-swW"/>
+                        <outlet property="titleTextField" destination="eI5-bS-aYY" id="gC7-6N-SBw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yPL-rW-l0a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-616" y="113"/>
+            <point key="canvasLocation" x="-617.39130434782612" y="112.5"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="text_primary">
+            <color red="0.067000001668930054" green="0.067000001668930054" blue="0.067000001668930054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
