Implement attachments bar.

--- a/Application/FireNote/Modules/Editor/EditorViewController.storyboard
+++ b/Application/FireNote/Modules/Editor/EditorViewController.storyboard
@@ -22,33 +22,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="4MI-cM-lKx">
-                                <rect key="frame" x="0.0" y="44" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="778"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iqB-jc-7Ql" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="275"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="282.5"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Note title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eI5-bS-aYY">
-                                                <rect key="frame" x="15" y="10" width="384" height="24"/>
+                                                <rect key="frame" x="15" y="10" width="384" height="31.5"/>
                                                 <color key="textColor" name="text_primary"/>
                                                 <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="19"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="caD-C4-uky" userLabel="Separator View">
-                                                <rect key="frame" x="0.0" y="44" width="414" height="1"/>
+                                                <rect key="frame" x="0.0" y="51.5" width="414" height="1"/>
                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="zky-Kg-86I"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ks-Yy-1dK" userLabel="Attachments View">
-                                                <rect key="frame" x="0.0" y="175" width="414" height="100"/>
+                                                <rect key="frame" x="0.0" y="182.5" width="414" height="100"/>
                                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="eyN-WO-t3e"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Gz-Ox-wY2" userLabel="TextViewContainer">
-                                                <rect key="frame" x="0.0" y="55" width="414" height="120"/>
+                                                <rect key="frame" x="0.0" y="62.5" width="414" height="120"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="120" id="hyY-5f-LAa"/>
@@ -90,11 +90,11 @@
                                     <constraint firstAttribute="height" constant="44" id="uMl-Qq-djb"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgk-KV-vh1" userLabel="Attachment Bar">
-                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
-                                <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgk-KV-vh1" userLabel="Attachment Bar" customClass="EditorAttachmentsBarView" customModule="FireNote" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="822" width="414" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="Ont-er-aqH"/>
+                                    <constraint firstAttribute="height" constant="40" id="Ont-er-aqH"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -114,7 +114,7 @@
                         <viewLayoutGuide key="safeArea" id="2qq-GK-RVu"/>
                     </view>
                     <connections>
-                        <outlet property="attachmentBar" destination="kgk-KV-vh1" id="Y3b-vt-cPE"/>
+                        <outlet property="attachmentBar" destination="kgk-KV-vh1" id="Svi-HU-Qer"/>
                         <outlet property="attachmentBarBottomConstraint" destination="GCP-Vf-dfk" id="xXK-JG-5Cu"/>
                         <outlet property="attachmentsViewHeightConstraint" destination="eyN-WO-t3e" id="KB2-jr-4f1"/>
                         <outlet property="bodyTextViewContainerView" destination="9Gz-Ox-wY2" id="YhN-Iz-cco"/>
